--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,28 +1,33 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Go
+name: build
 
 on:
   push:
-    branches: [ "master" ]
+    branches:
+    tags:
   pull_request:
-    branches: [ "master" ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v4
+      - name: Set up Go 1.24
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.24"
+        id: go
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.23'
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Build
-      run: go build -v ./...
+      - name: Build and test
+        run: |
+          go test -v -timeout=100s ./...
 
-    - name: Test
-      run: go test -v ./...
+      - name: Run golangci-lint
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: latest
